--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.2.12",
     "lucide-react": "^0.397.0",
     "next": "14.2.4",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
